fix(plugins/plugin-core-support): dark mode fixes for about
plus no spinning icon!
Fixes #540

--- a/plugins/plugin-core-support/web/css/about.css
+++ b/plugins/plugin-core-support/web/css/about.css
@@ -1,21 +1,24 @@
-::selection {
-    /*
-     * hack to avoid these messages from showing up in the terminal: Couldn't set selectedTextBackgroundColor from default ()
-     * see: https://github.com/electron/electron/issues/4420
-     */
-    background: rgba(70, 188, 223, 0.5);
-}
 body {
     font-family: var(--font-sans-serif);
-    background: var(--color-stripe-01);
-    color: hsla(240, 2%, 90%, 1);
+    background: var(--color-ui-01);
+    color: var(--color-text-01);
+}
+body[kui-theme="Light"] {
+    background: var(--color-text-01);
+    color: var(--color-ui-01);
 }
 .title {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     width: 100%;
     text-align: center;
     cursor: initial;
-    font-weight: 300;
+    font-weight: normal;
+}
+.copyright, .versions {
+    color: var(--color-text-02);
+}
+body[kui-theme="Light"] .copyright, body[kui-theme="Light"] .versions {
+    color: var(--color-ui-05);
 }
 .title:hover {
     cursor: pointer;
@@ -23,24 +26,20 @@ body {
 .title, .description, .versions, .copyright {
     -webkit-app-region: no-drag;
     user-select: initial; /* allow users to select version */
+    font-weight: normal;
 }
 .description {
     margin: 2em;
     text-align: justify;
-    font-weight: 300;
 }
 .logo {
-    width: 250px;
     margin: 1em;
 }
 #app-icon {
-    height: 250px;
-    animation:spin 800ms ease-in-out 1;
     transition: all .8s ease-in-out;
 }
 #app-icon:hover {
-    transform: rotate(360deg);
-    filter: hue-rotate(-40deg);
+    filter: brightness(1.1);
 }
 /* spin animation */
 /*@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
